Event new texts

--- a/src/app/i18n/locales/es/translation.json
+++ b/src/app/i18n/locales/es/translation.json
@@ -2,6 +2,13 @@
   "topH1": "FONDO TERRITORIAL MESOAMERICANO",
   "subH1": "de la Alianza Mesoamericana de Pueblos y Bosques",
   "lang": "lenguaje",
+  "evento_dialogo": {
+    "downloadpdf": "Descargar Agenda Pdf ",
+    "title": "“DIÁLOGO SOBRE EL IMPACTO DEL FINANCIAMIENTO TERRITORIAL DIRECTO A PUEBLOS INDÍGENAS Y COMUNIDADES LOCALES EN MESOAMÉRICA“",
+    "date": "13 y 14 de febrero",
+    "location": "San José, Costa Rica",
+    "agendatext":"AGENDA: Puedes descargar a continuación el programa de los dos días de paneles y talleres."
+  },
   "aria": {
     "homeLogo": "Ir al inicio",
     "imgAMPBLogo": "Alianza Mesoamericana de Pueblos y Bosques",
@@ -193,21 +200,18 @@
     "KirsiChavda_Desc5": "La Sra. Chavda tiene dos maestrías en ciencias sociales, una en Política Social y otra en Trabajo Social, de las Universidades del Este de Finlandia y la de Jyväskylä.",
     "GustavoSanchez_Name": "Gustavo Sánchez Valle",
     "GustavoSanchez_Desc1": "Gustavo Sánchez es originario del Estado de Jalisco en México, es Ingeniero Agrónomo Especialista en Economía Agrícola por la Universidad Autónoma Chapingo (UACh) y cuenta con una Maestría en Desarrollo Rural Regional por la misma casa de estudios.",
-    "GustavoSanchez_Desc2": "Se ha especializado en el fortalecimiento de organizaciones comunitarias forestales apoyando actividades de comunicación, representación, gestión de proyectos, diseño de propuestas de políticas públicas y participación en espacios internacionales en representación de organizaciones indígenas y de comunidades locales." ,
+    "GustavoSanchez_Desc2": "Se ha especializado en el fortalecimiento de organizaciones comunitarias forestales apoyando actividades de comunicación, representación, gestión de proyectos, diseño de propuestas de políticas públicas y participación en espacios internacionales en representación de organizaciones indígenas y de comunidades locales.",
     "GustavoSanchez_Desc3": "Actualmente es Presidente de la Red Mexicana de Organizaciones Campesinas Forestales (Red MOCAF), una red de organizaciones de forestería tanto indígenas como de comunidades locales y forma parte de las mesas directivas de la Alianza Mesoamericana de Pueblos y Bosques (AMPB); de la Iniciativa de los Recursos y los Derechos (RRI) y de la iniciativa Financiera para los Derechos Comunitarios a la Tierra y la Conservación (CLARIFI).",
     "SaraMadriz_Name": "Sara Madriz Martínez",
     "SaraMadriz_Desc1": "Sara Madriz Martínez, indígena Cabécar costarricense, actualmente es Vocal 1 y Coordinadora de Jóvenes en la Asociación de Desarrollo Integral de la Reserva Indígena Cabécar de Nairi Awari (ADIRINA) en Pacuarito de Siquirres, Costa Rica, una de las organizaciones que forma parte de la Red Indígena Bribri-Cabécar (RIBCA), un grupo de ocho territorios indígenas de Costa Rica.",
-    "SaraMadriz_Desc2": "También es Vicepresidenta de la Junta Directiva de la Alianza Mesoamericana de Pueblos y Bosques. Con más de 6 años de experiencia en defensa de los derechos indígenas y la preservación de la cultura indígena." ,
- 
+    "SaraMadriz_Desc2": "También es Vicepresidenta de la Junta Directiva de la Alianza Mesoamericana de Pueblos y Bosques. Con más de 6 años de experiencia en defensa de los derechos indígenas y la preservación de la cultura indígena.",
     "GiuseppeOlo_Name": "Marcedonio Cortave ",
     "GiuseppeOlo_Desc1": "Marcedonio Cortave Fundador y Director Ejecutivo de la Asociación de Comunidades Forestales de Petén (ACOFOP) en Guatemala ha cosechado éxitos personales e institucionales, siendo un icono emblemático en el tema organizativo y de conservación de los recursos naturales y culturales de la región petenera.",
-    "GiuseppeOlo_Desc2": "Bajo su dirección, ACOFOP se ha hecho merecedor de premios y logros reconocidos nacional e internacionalmente en el tema de conservación mediante la participación de la sociedad civil organizada en el manejo de los recursos naturales. La visión del Señor Cortave dicha en sus propias palabras es que, \"Para sostener el bosque primero se debe sostener y consolidar a las comunidades\". Por eso su trayectoria en beneficio de todos los guatemaltecos, le ha permitido recibir el grado académico de Doctor Honoris Causa otorgado por la Facultad de Agronomía de la gloriosa y tricentenaria Universidad de San Carlos de Guatemala (USAC)." ,
+    "GiuseppeOlo_Desc2": "Bajo su dirección, ACOFOP se ha hecho merecedor de premios y logros reconocidos nacional e internacionalmente en el tema de conservación mediante la participación de la sociedad civil organizada en el manejo de los recursos naturales. La visión del Señor Cortave dicha en sus propias palabras es que, \"Para sostener el bosque primero se debe sostener y consolidar a las comunidades\". Por eso su trayectoria en beneficio de todos los guatemaltecos, le ha permitido recibir el grado académico de Doctor Honoris Causa otorgado por la Facultad de Agronomía de la gloriosa y tricentenaria Universidad de San Carlos de Guatemala (USAC).",
     "GiuseppeOlo_Desc3": "",
-
     "Anibal_Name": "Aníbal Sánchez-Sagla Dummad",
     "Anibal_Desc1": "Aníbal Sánchez-Sagla Dummad, miembro del Congreso General Guna y originario de la comunidad de Mandi Ugbigandub, en Panamá. Aprendió desde joven diversos tratados gunas y conocimientos sobre medicina tradicional.",
-    "Anibal_Desc2": "Posee el título de Argar (intérprete de tratados, Bab Igar y conocimientos Gunas) en la Comarca Gunayala. Desde hace 5 años, se desempeña como Sagla Dummad de la Comarca Gunayala y ocupa el cargo de VOCERO en la Junta Directiva de la Alianza Mesoamericana de Pueblos y Bosques (AMPB), así como en el Fondo Mesoamericano." 
-    
+    "Anibal_Desc2": "Posee el título de Argar (intérprete de tratados, Bab Igar y conocimientos Gunas) en la Comarca Gunayala. Desde hace 5 años, se desempeña como Sagla Dummad de la Comarca Gunayala y ocupa el cargo de VOCERO en la Junta Directiva de la Alianza Mesoamericana de Pueblos y Bosques (AMPB), así como en el Fondo Mesoamericano."
   },
   "sectionForm": {
     "title": "Formulario de quejas",
@@ -243,7 +247,6 @@
     "success": "Su queja ha sido enviada",
     "fail": "Ha ocurrido un error, por favor inténtelo de nuevo más tarde"
   },
-
   "sectionDialogo": {
     "title": "AGENDA"
   }
