--- a/src/app/i18n/locales/en/translation.json
+++ b/src/app/i18n/locales/en/translation.json
@@ -3,6 +3,13 @@
   "subH1": "by the Mesoamerican Alliance of Peoples and Forests",
   "to-second-page": "To second page",
   "lang": "Language",
+  "evento_dialogo": {
+    "downloadpdf": "Download Pdf Agenda",
+    "title": "“DIALOGUE ON THE IMPACT OF DIRECT TERRITORIAL FINANCING TO INDIGENOUS PEOPLES AND LOCAL COMMUNITIES IN MESOAMERICA”",
+    "date": "February 13 & 14, 2024",
+    "location": "San José, Costa Rica",
+    "agendatext":"AGENDA: Please download the program for the two day panels and workshops below."
+  },
   "aria": {
     "homeLogo": "Navigate home",
     "imgAMPBLogo": "Alianza Mesoamericana de Pueblos y Bosques",
@@ -102,7 +109,6 @@
     "pre_text4": "the Mesoamerican School of Leadership (EML)",
     "pre_text5": ", and the Coordinating Committee of ",
     "pre_text6": "Territorial Women Leaders (CMLT).",
-    
     "text1": "FTM is governed by a 7-person Board of Directors*, composed of:",
     "text2": "4 members of the AMPB.",
     "text3": "3 independent persons",
@@ -194,24 +200,19 @@
     "KirsiChavda_Desc4": "At the Finnish CSO Kepa’s country office in Nicaragua, she contributed to the strengthening of the civil society, awareness on the impacts of extractive industries and territorial governance in Mesoamerica for three years. ",
     "KirsiChavda_Desc5": "Ms. Chavda holds a MSSc. in both Social Policy and Social Work from the Universities of Eastern Finland and Jyväskylä.",
     "GustavoSanchez_Name": "Gustavo Sánchez Valle",
-    "GustavoSanchez_Desc1": "Gustavo Sánchez is originally from the State of Jalisco in Mexico, he is an Agricultural Engineer with a Specialist in Agricultural Economics from the Autonomous University of Chapingo (UACh) and has a Master's Degree in Regional Rural Development from the same university. ", 
+    "GustavoSanchez_Desc1": "Gustavo Sánchez is originally from the State of Jalisco in Mexico, he is an Agricultural Engineer with a Specialist in Agricultural Economics from the Autonomous University of Chapingo (UACh) and has a Master's Degree in Regional Rural Development from the same university. ",
     "GustavoSanchez_Desc2": "He has specialized in strengthening forest community organizations by supporting communication activities, representation, project management, design of public policy proposals and participation in international spaces on behalf of indigenous organizations and local communities. ",
     "GustavoSanchez_Desc3": "He is currently President of the Mexican Network of Peasant Forest Organizations (MOCAF Network), a network of forestry organizations, both indigenous and local communities, and is part of the board of directors of the Mesoamerican Alliance of Peoples and Forests (AMPB); of the Resources and Rights Initiative (RRI) and the Community Land Rights and Conservation Finance Initiative (CLARIFI).",
-  
     "SaraMadriz_Name": "Sara Madriz Martínez",
     "SaraMadriz_Desc1": "Sara Madriz Martínez, a Costa Rican Cabécar indigenous woman, is currently Spokesperson 1 and Youth Coordinator of the Association for the Integral Development of the Cabécar de Nairi Awari Indigenous Reserve (ADIRINA) in Pacuarito Siquirres, Costa Rica, one of the organizations that is part of the Bribri-Cabécar Indigenous Network (RIBCA), a group of eight indigenous territories in Costa Rica.",
-    "SaraMadriz_Desc2": "She is also Vice President of the Board of Directors of the Mesoamerican Alliance of Peoples and Forests. With more than 6 years of experience in the defense of indigenous rights and the preservation of indigenous culture." ,
-    
+    "SaraMadriz_Desc2": "She is also Vice President of the Board of Directors of the Mesoamerican Alliance of Peoples and Forests. With more than 6 years of experience in the defense of indigenous rights and the preservation of indigenous culture.",
     "GiuseppeOlo_Name": "Marcedonio Cortave ",
     "GiuseppeOlo_Desc1": "Marcedonio Cortave, Founder and Executive Director of the Association of Forest Communities of Petén (ACOFOP) in Guatemala, has achieved personal and institutional successes, being an emblematic icon in the organization and conservation of the natural and cultural resources of the Peten region.",
-    "GiuseppeOlo_Desc2": "Under his leadership, ACOFOP has earned nationally and internationally recognized awards and achievements in conservation through the participation of organized civil society in the management of natural resources. Mr. Cortave's vision is that, \"To sustain the forest, communities must first be sustained and consolidated\".  That is why his trajectory for the benefit of all Guatemalans has allowed him to receive the academic degree of Doctor Honoris Causa granted by the Faculty of Agronomy of the glorious and three-hundred-year-old University of San Carlos de Guatemala (USAC)." ,
-    "GiuseppeOlo_Desc3": "" ,
-
+    "GiuseppeOlo_Desc2": "Under his leadership, ACOFOP has earned nationally and internationally recognized awards and achievements in conservation through the participation of organized civil society in the management of natural resources. Mr. Cortave's vision is that, \"To sustain the forest, communities must first be sustained and consolidated\".  That is why his trajectory for the benefit of all Guatemalans has allowed him to receive the academic degree of Doctor Honoris Causa granted by the Faculty of Agronomy of the glorious and three-hundred-year-old University of San Carlos de Guatemala (USAC).",
+    "GiuseppeOlo_Desc3": "",
     "Anibal_Name": "Aníbal Sánchez-Sagla Dummad",
     "Anibal_Desc1": "Aníbal Sánchez-Sagla Dummad of the Guna General Congress,  from the community of Mandi Ugbigandub in Panama. From a young age, he immersed himself in various Guna treaties and traditional medicine.",
-    "Anibal_Desc2": "Holder of the title of Argar (interpreter of treaties, Bab Igar, and Guna knowledge) in the Gunayala Region, Aníbal has been serving as the Sagla Dummad for the past five years. Additionally, he holds the position of spokesperson on the Board of Directors of the Mesoamerican Alliance of Peoples and Forests (AMPB) and also for the Mesoamerican Territorial Fund." 
-    
-    
+    "Anibal_Desc2": "Holder of the title of Argar (interpreter of treaties, Bab Igar, and Guna knowledge) in the Gunayala Region, Aníbal has been serving as the Sagla Dummad for the past five years. Additionally, he holds the position of spokesperson on the Board of Directors of the Mesoamerican Alliance of Peoples and Forests (AMPB) and also for the Mesoamerican Territorial Fund."
   },
   "sectionForm": {
     "title": "Complaint Form",
@@ -247,7 +248,6 @@
     "success": "Your complaint has been submitted",
     "fail": "An error has occurred, please try again later"
   },
-
   "sectionDialogo": {
     "title": "SCHEDULE"
   }
